@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2008, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -44,10 +44,13 @@
 #include "glew.h"
 
 #include "OpenEXR/ImathVec.h"
+#include "OpenEXR/ImathColor.h"
 
 namespace IECoreGL
 {
 
+inline void glColor( const Imath::V3f &c );
+inline void glColor( const Imath::Color4f &c );
 inline void glVertex( const Imath::V3f &v );
 inline void glNormal( const Imath::V3f &n );
 inline void glTranslate( const Imath::V2f &t );
